# rpg-game-qt

./: CMakeLists.txt  README.md
include/: battle.h  battlewindow.h  boss.h  door.h  element.h  entry.h  gameprocess.h  interpreter.h  inventory.h  inventorywindow.h  item.h  keypresshandler.h  loadgamewindow.h  location.h  locationflyweight.h  mainwindow.h  mapmotionhandler.h  maps.h  maptable.h  newgamewindow.h  oponent.h  opponent.h  player.h  save.h  subtitle.h  villager.h
resources/: resfile.qrc
resources/differentResources/GoldMap13/: Events.ini  Main.ini  Maps.ini  Options.ini  Pokémons.ini  Readme.txt  Tileset1.dib  Tileset10.dib  Tileset11.dib  Tileset12.dib  Tileset13.dib  Tileset14.dib  Tileset15.dib  Tileset16.dib  Tileset17.dib  Tileset18.dib  Tileset2.dib  Tileset3.dib  Tileset4.dib  Tileset5.dib  Tileset6.dib  Tileset7.dib  Tileset8.dib  Tileset9.dib  Tilesets.ini
resources/images/: graphics1.jpg~
resources/maps/: map0.txt  map1.txt  map2.txt  map3.txt
save/: Mateusz.txt  awd.txt  d.txt  mat.txt
src/: battlewindow.cpp  battlewindow.ui  entry.cpp  entry.ui  inventorywindow.cpp  inventorywindow.ui  item.cpp  loadgamewindow.cpp  loadgamewindow.ui  location.cpp  locationflyweight.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  maptable.cpp  maptable.ui  newgamewindow.cpp  newgamewindow.ui  oponent.cpp  opponent.cpp  player.cpp
